--- a/config/tasks/restore_state/restore_state.yaml
+++ b/config/tasks/restore_state/restore_state.yaml
@@ -1,1 +1,1 @@
-weight_file: '/path/to/outputs/ClassifierBEST.pth'
+weight_file: /sps/t2k/eleblevec/updated_watchmal/WatChMaL/outputs/2024-10-14/15-59-20/ClassifierEngine_ResGateConv_v2_BEST.pth
