--- a/config/model/small_resgated_regression_2in_1out.yaml
+++ b/config/model/small_resgated_regression_2in_1out.yaml
@@ -1,5 +1,5 @@
 _target_: watchmal.model.grant_gnn.ResGateConv_v2
 in_channels: 2
-conv_in_channels: [8, 32, 64, 64]
-linear_out_features: [128, 32, 16, 1]
-dropout: 0.1
+conv_in_channels: [8, 16, 16]
+linear_out_features: [32, 16, 1]
+dropout: 0.05
