--- a/config/tasks/train/graph_gpu_train_val.yaml
+++ b/config/tasks/train/graph_gpu_train_val.yaml
@@ -1,6 +1,8 @@
 
-epochs: 1000
-val_interval: 75 # Print status on the gradient descent every val_interval step
+epochs: 150
+val_interval: 75 
+# Print status on the gradient descent every val_interval step
+# + wandb global log (gradients + parameters) every 2 * val_interval
 
 checkpointing: False
 
@@ -15,7 +17,7 @@ data_loaders:
     pin_memory: True
     seed: 5
     num_workers: 3   
-    batch_size: 450
+    batch_size: 700
     
   validation:
     split_key: val_idxs
@@ -24,4 +26,4 @@ data_loaders:
 
     pin_memory: True
     num_workers: 3 
-    batch_size: 450
+    batch_size: 700
