--- a/config/model/gat_molecular_paper.yaml
+++ b/config/model/gat_molecular_paper.yaml
@@ -1,6 +1,10 @@
 _target_: watchmal.model.gat_molecular_paper.GraphAttentionNetwork
-hidden_channels: 64
-in_channels: 1
-num_heads: 4
+
+hidden_channels: 70
+num_heads: 5
 num_layers: 4
+in_channels: 1
 out_channels: 1
+
+use_nhits: True
+use_event_total_charge: True
