--- a/config/tasks/evaluate/graph_no_batch_log_evaluate.yaml
+++ b/config/tasks/evaluate/graph_no_batch_log_evaluate.yaml
@@ -1,5 +1,6 @@
 report_interval: 50
 batch_log: False
+prefix_for_plot_names: ""
 
 data_loaders:
   test:
@@ -7,7 +8,7 @@ data_loaders:
     is_graph: True
     drop_last: True 
 
-    pin_memory: True
+    pin_memory: False
     seed: null
-    num_workers: 2
-    batch_size: 700
+    num_workers: 0
+    batch_size: 2
