--- a/config/model/gat_molecular_paper.yaml
+++ b/config/model/gat_molecular_paper.yaml
@@ -3,8 +3,8 @@ _target_: watchmal.model.gat_molecular_paper.GraphAttentionNetwork
 hidden_channels: 70
 num_heads: 5
 num_layers: 4
-in_channels: 1
+in_channels: 2
 out_channels: 1
 
-use_nhits: True
-use_event_total_charge: True
+use_nhits: False
+use_event_total_charge: False
